# Geant4-exampleB4-inFCCSW

./: .gitignore  CMakeLists.txt  README.Gaudi.md
B4d/: CMakeLists.txt
B4d/components/: SimG4ExampleB4Actions.cpp  SimG4ExampleB4Actions.h  SimG4ExampleB4Detector.cpp  SimG4ExampleB4Detector.h
B4d/options/: b4_example_gaudi.py
